--- a/my-store/src/app/components/product-list/product-list.component.html
+++ b/my-store/src/app/components/product-list/product-list.component.html
@@ -1,9 +1,8 @@
 <div class="product-list">
-  <div *ngFor="let product of products" class="product-item">
-    <h2>{{ product.name }}</h2>
-    <img [src]="product.url" alt="{{ product.name }}" />
-    <p>{{ product.description }}</p>
-    <p>Price: ${{ product.price }}</p>
-    <button>Add to Cart</button>
-  </div>
+  <app-product-item
+    *ngFor="let product of products$ | async"
+    [product]="product"
+    (addToCart)="addToCart($event)"
+  >
+  </app-product-item>
 </div>
