--- a/my-store/src/app/components/product-item-detail/product-item-detail.component.html
+++ b/my-store/src/app/components/product-item-detail/product-item-detail.component.html
@@ -1,5 +1,5 @@
 <div class="product-item-detail" *ngIf="product$ | async as product">
-  <img [src]="product.imageUrl" alt="{{ product.name }}" />
+  <img [src]="product.url" alt="{{ product.name }}" />
   <h2>{{ product.name }}</h2>
   <p>{{ product.description }}</p>
   <p>Price: {{ product.price | currency }}</p>
