--- a/my-store/src/app/components/product-item/product-item.component.css
+++ b/my-store/src/app/components/product-item/product-item.component.css
@@ -1,21 +1,49 @@
-.product-image {
-  list-style-type: none;
-  width: 290px;
-  padding: 20px;
-  margin: 6px 6px;
+.product-item {
+  background-color: #f9f9f9; 
   border: 1px solid #33b5e5;
+  border-radius: 8px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  margin: 10px; 
+  padding: 15px;
+  width: 300px; 
+  text-align: center;
+  transition: transform 0.2s; 
+}
+
+.product-item:hover {
+  transform: scale(1.05); 
+}
+
+.product-image {
+  height: 20px; 
+  overflow: hidden;
+}
+
+.product-image img {
+  max-width: 100%; 
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 5px; 
 }
 
 .product-container {
   margin-top: 64px;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  flex-wrap: wrap; 
+  flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .select-input {
   width: 108px;
-  margin-bottom: 8px;
+  margin: 8px;
+}
+.btn {
+  background-color: #33b5e5;
+  color: rgb(169, 29, 29);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
 }
