--- a/my-store/src/app/components/product-list/product-list.component.css
+++ b/my-store/src/app/components/product-list/product-list.component.css
@@ -6,41 +6,42 @@
 }
 
 .product-item {
-  background-color: #f9f9f9; 
+  background-color: #f9f9f9;
   border: 1px solid #33b5e5;
-  border-radius: 8px; 
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
-  margin: 10px; 
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin: 10px;
   padding: 15px;
-  width: 300px; 
+  width: 300px;
   text-align: center;
-  transition: transform 0.2s; 
+  transition: transform 0.2s;
 }
 
 .product-item:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
 
 .product-image {
-  height: 20px; 
+  height: 20px;
   overflow: hidden;
 }
 
 .product-image img {
-  max-width: 100%; 
-  height: 100%;
-  object-fit: cover; 
-  border-radius: 5px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
+  height: fit-content;
+  object-fit: contain;
+  border-radius: 5px;
 }
 
 .product-name {
-  font-size: 1.5em; 
+  font-size: 1.5em;
   color: #333;
   margin: 10px 0;
 }
 
 .product-description {
-  font-size: 1em; 
+  font-size: 1em;
   color: #666;
   margin: 10px 0;
 }
@@ -51,8 +52,8 @@
   margin: 10px 0;
 }
 
-.select-input {
-  width: 100px; 
+.product-select-input {
+  width: 100px;
   margin: 10px 0;
   padding: 5px;
   border: 1px solid #ccc;
@@ -62,6 +63,7 @@
 .product-button {
   background-color: #33b5e5;
   color: white;
+  margin-top: 10px 0;
   border: none;
   border-radius: 5px;
   padding: 10px 15px;
