--- a/my-store/src/app/components/product-item-detail/product-item-detail.component.css
+++ b/my-store/src/app/components/product-item-detail/product-item-detail.component.css
@@ -1,8 +1,8 @@
 .product-image img {
-  max-width: 100%; /* Responsive image */
-  height: 100%; /* Fill the height of the container */
-  object-fit: cover; /* Cover the area while maintaining aspect ratio */
-  border-radius: 5px; /* Rounded corners for images */
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .select-input {
