feat: Implement header for every page

--- a/my-store/src/app/components/product-list/product-list.component.html
+++ b/my-store/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="product-list">
   <div *ngFor="let product of products$ | async" class="product-item">
     <img [src]="product.url" alt="{{ product.name }}" />
