--- a/my-store/src/app/components/confirmation/confirmation.component.html
+++ b/my-store/src/app/components/confirmation/confirmation.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <form (ngSubmit)="onSubmit()">
   <label for="name">Name:</label>
   <input type="text" id="name" [(ngModel)]="name" name="name" required />
