--- a/my-store/src/app/components/product-item-detail/product-item-detail.component.html
+++ b/my-store/src/app/components/product-item-detail/product-item-detail.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="product-item-detail" *ngIf="product$ | async as product">
   <img [src]="product.url" alt="{{ product.name }}" />
   <h2>{{ product.name }}</h2>
