--- a/my-store/src/app/components/product-item-detail/product-item-detail.component.css
+++ b/my-store/src/app/components/product-item-detail/product-item-detail.component.css
@@ -1,8 +1,27 @@
+/* General styles for the detail container */
+.detail-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 64px;
+}
+
+.product-image {
+  flex: 1;
+  max-width: 300px;
+}
+
 .product-image img {
   max-width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.detail-item {
+  flex: 2;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .select-input {
@@ -10,18 +29,9 @@
   margin-bottom: 8px;
 }
 
-.detail-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 64px;
-}
-
-.detail-item {
-  margin-left: 128px;
-  margin-right: 128px;
-}
-
 .back-link {
   margin-top: 8px;
+  text-decoration: underline;
+  color: #33b5e5;
+  cursor: pointer;
 }
