--- a/my-store/src/app/components/product-item-detail/product-item-detail.component.html
+++ b/my-store/src/app/components/product-item-detail/product-item-detail.component.html
@@ -16,3 +16,6 @@
     <div class="back-link" (click)="goBack()">Back to Products</div>
   </div>
 </div>
+<div *ngIf="showSuccessMessage" class="success-message">
+  Product added to cart successfully!
+</div>
