--- a/my-store/src/app/components/cart/cart.component.html
+++ b/my-store/src/app/components/cart/cart.component.html
@@ -6,9 +6,11 @@
   </div>
   <div *ngFor="let item of cartItems" class="cart-item">
     <img [src]="item.url" alt="{{ item.name }}" />
-    <h3>{{ item.name }}</h3>
-    <p>Price: {{ item.price | currency }}</p>
-    <p>Quantity: {{ item.quantity }}</p>
+    <div class="cart-item-details-horizontal">
+      <span class="cart-item-name">{{ item.name }}</span>
+      <span class="cart-item-price">Price: {{ item.price | currency }}</span>
+      <span class="cart-item-quantity">Quantity: {{ item.quantity }}</span>
+    </div>
     <button (click)="removeFromCart(item.id)">Remove</button>
   </div>
   <div *ngIf="cartItems.length > 0">
